lipu-pi-nasin-sewi: prep

--- a/lipu-pi-nasin-sewi/12.md
+++ b/lipu-pi-nasin-sewi/12.md
@@ -1,20 +1,31 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 12
+title: lipu nasin la, kipisi nanpa 12 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 11](11)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 13](13)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 12
-
-五色令人目盲。五音令人耳聾。五味令人口爽。馳騁畋獵、令人心發狂。難得之貨、令人行妨。是以聖人、爲腹不爲目。故去彼取此。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
-|  |  | The five colors blind our eyes.
-|  |  | The five tones deafen our ears.
-|  |  | The five flavors confuse our taste.
-|  |  | Racing and hunting madden our minds.
-|  |  | Possessing rare treasures brings about harmful behavior.
-|  |  | Therefore the sage acts from his gut, and not from his eyes.
-|  |  | He lets go of that and chooses this.
+{:.loseta}
+|:-:|-|-
+| 五色令人目盲       |  | The five colors blind our eyes.
+| 五音令人耳聋       |  | The five tones deafen our ears.
+| 五味令人口爽       |  | The five flavors confuse our taste.
+| 驰骋畋猎<br/>令人心发狂 |  | Racing and hunting madden our minds.
+| 难得之货<br/>令人行妨   |  | Possessing rare treasures brings about harmful behavior.
+| 是以圣人<br/>为腹不为目 |  | Therefore the sage acts from his gut, and not from his eyes.
+| 故去彼取此         |  | He lets go of that and chooses this.
 
 {% include kipisi-nav.html num=12 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
