--- a/lipu-pi-nasin-sewi/13.md
+++ b/lipu-pi-nasin-sewi/13.md
@@ -1,26 +1,37 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 13
+title: lipu nasin la, kipisi nanpa 13 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 12](12)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 14](14)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 13
-
-寵辱若驚。貴大患若身。何謂寵辱若驚。寵爲上、辱爲下。得之若驚、失之若驚。是謂寵辱若驚。何謂貴大患若身。吾所以有大患者、爲吾有身。及吾無身、吾有何 患。故貴以身爲天下、乃可寄天下。愛以身爲天下、乃可託天下。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
-|  |  | Accept humiliation as a surprise.
-|  |  | Value great misfortune as your own self.
-|  |  | What do I mean by “Accept humiliation as a surprise”?
-|  |  | When you are humble
-|  |  | Attainment is a surprise
-|  |  | And so is loss.
-|  |  | That's why I say, “Accept humiliation as a surprise.”
-|  |  | What do I mean by “Value great misfortune as your own self”?
-|  |  | If I have no self, how could I experience misfortune?
-|  |  | Therefore, if you dedicate your life for the benefit of the world,
-|  |  | You can rely on the world.
-|  |  | If you love dedicating yourself in this way,
-|  |  | You can be entrusted with the world.
+{:.loseta}
+|:-:|-|-
+| 宠辱若惊          | o pona e jaki, o sama e wile ala.                     | Accept humiliation as a surprise.
+| 贵大患若身        | o olin e pakala suli, o sama e sijelo sina.           | Value great misfortune as your own self.
+| 何谓宠辱若惊      | te pona e jaki, sama e wile ala to li seme?           | What do I mean by “Accept humiliation as a surprise”?
+| 宠为上<br/>辱为下 | _tenpo pi jaki pona la:_                              | When you are humble
+| 得之若惊          | jo li wile ala.                                       | Attainment is a surprise
+| 失之若惊          | kin la, weka li wile ala.                             | And so is loss.
+| 是谓宠辱若惊      | ni li te pona e jaki, sama e wile ala to              | That's why I say, “Accept humiliation as a surprise.”
+| 何谓贵大患若身    | te olin e pakala suli, sama e sijelo sina to li seme? | What do I mean by “Value great misfortune as your own self”?
+| 吾所以有大患者<br/>为吾有身<br/>及吾无身<br/>吾有何患 | ...               | If I have no self, how could I experience misfortune?
+| 故贵以身为天下 | sina ... | Therefore, if you dedicate your life for the benefit of the world,
+| 乃可寄天下     |  | You can rely on the world.
+| 爱以身为天下   |  | If you love dedicating yourself in this way,
+| 乃可託天下     |  | You can be entrusted with the world.
 
 {% include kipisi-nav.html num=13 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
