--- a/lipu-pi-nasin-sewi/16.md
+++ b/lipu-pi-nasin-sewi/16.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 16
+title: lipu nasin la, kipisi nanpa 16 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 15](15)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 17](17)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 16
+致虚极、守静篤。万物竝作、吾以观復。夫物艺艺、各復归其根。归根曰静。是谓復命。復命曰常。知常曰明。不知常、妄作凶。知常容。容乃公。公乃王。王乃 天。天乃道。道乃久。没身不殆。
 
-致虛極、守靜篤。萬物竝作、吾以觀復。夫物藝藝、各復歸其根。歸根曰靜。是謂復命。復命曰常。知常曰明。不知常、妄作凶。知常容。容乃公。公乃王。王乃 天。天乃道。道乃久。没身不殆。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Effect vacuity to the extreme.
 |  |  | Keep stillness whole.
 |  |  | Myriad things act in concert.
@@ -27,3 +32,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 16
 |  |  | Though you lose the body, you do not die.
 
 {% include kipisi-nav.html num=16 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
