--- a/lipu-pi-nasin-sewi/17.md
+++ b/lipu-pi-nasin-sewi/17.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 17
+title: lipu nasin la, kipisi nanpa 17 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 16](16)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 18](18)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 17
+太上、下知有之。其次、亲而誉之。其次、畏之。其次、侮之。信不足焉、有不信焉。悠兮其贵言。功成事遂、百姓皆谓我自然。
 
-太上、下知有之。其次、親而譽之。其次、畏之。其次、侮之。信不足焉、有不信焉。悠兮其貴言。功成事遂、百姓皆謂我自然。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | From great antiquity forth they have known and possessed it.
 |  |  | Those of the next level loved and praised it.
 |  |  | The next were in awe of it.
@@ -19,3 +24,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 17
 |  |  | Everybody says: “We did it!”
 
 {% include kipisi-nav.html num=17 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
