--- a/lipu-pi-nasin-sewi/18.md
+++ b/lipu-pi-nasin-sewi/18.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 18
+title: lipu nasin la, kipisi nanpa 18 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 17](17)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 19](19)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 18
+大道废、有仁义。慧智出、有大伪。六亲不和、有孝慈。国家昏乱、有忠臣。
 
-大道廢、有仁義。慧智出、有大僞。六親不和、有孝慈。國家昏亂、有忠臣。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | When the great Way perishes
 |  |  | There is humaneness and justice.
 |  |  | When intelligence is manifest
@@ -19,3 +24,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 18
 |  |  | Loyal ministers appear.
 
 {% include kipisi-nav.html num=18 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
