--- a/lipu-pi-nasin-sewi/19.md
+++ b/lipu-pi-nasin-sewi/19.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 19
+title: lipu nasin la, kipisi nanpa 19 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 18](18)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 20](20)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 19
+绝圣弃智、民利百倍。绝仁弃义、民復孝慈。绝巧弃利、盗贼无有。此三者、以为文不足。故令有所属。见素抱朴、少私寡欲。
 
-絕聖棄智、民利百倍。絕仁棄義、民復孝慈。絕巧棄利、盜賊無有。此三者、以爲文不足。故令有所屬。見素抱樸、少私寡欲。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Get rid of “holiness”and abandon “wisdom”and the people will benefit a hundredfold.
 |  |  | Get rid of “humaneness”and abandon “rightness”and the people will return to filial piety and compassion.
 |  |  | Get rid of cleverness and abandon profit, and thieves and gangsters will not exist.
@@ -18,3 +23,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 19
 |  |  | Lessen selfishness and decrease desire.
 
 {% include kipisi-nav.html num=19 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
