--- a/lipu-pi-nasin-sewi/2.md
+++ b/lipu-pi-nasin-sewi/2.md
@@ -12,24 +12,24 @@ sidebar:
 
 {:.loseta}
 |:-:|-|-
-| 天下皆知美之为美   | lukin wawa la, jan ale li sona e wawa lukin                 | All in the world recognize the beautiful as beautiful.
-| 斯恶已             | kule jaki li tan ni                                         | Herein lies ugliness.
-| 皆知善之为善       | pona la, jan ale li sona e pona                             | All recognize the good as good.
-| 斯不善已           | pona ala li tan ni                                          | Herein lies evil.
-| 故有无相生         | sona ni la, jo li open e weka • weka li open e jo           | Therefore — Presence and absence produce each other.
-| 难易相成           | nasa ike li open e nasa pona • nasa pona li open e nasa ike | Difficulty and ease bring about each other.
-| 长短相较           | suli li mute e lili • lili li mute e suli                   | Long and short delimit each other.
-| 高下相倾           | lawa li anpa e noka • noka li anpa e lawa                   | High and low rest on each other.
-| 音声相和           | kalama li pona tawa mu • mu li pona tawa kalama             | Sound and voice harmonize each other.
-| 前后相随           | monsi li lawa e sinpin • sinpin li lawa e monsi             | Front and back follow each other.
-| 是以圣人处无为之事 | sona ni la, jan sewi li jo kepeken pali ala                 | Therefore the sage abides in the condition of <abbr title="unattached-action">wu-wei</abbr>.
-| 行不言之教         | kin: jan sewi li lawa kepeken nimi ala                      | And carries out the wordless teaching.
-| 万物作焉而不辞     | ni li mama e ijo ale • taso la, ijo ale li tu ala           | Here, the myriad things are made, yet not separated.
-| 生而不有           | ni li mama li jo ala                                        | Therefore the sage produces without possessing,
-| 为而不恃           | ni li ilo li wile ala                                       | Acts without expectations
-| 功成而弗居         | ni li pali anu seme?                                        | And accomplishes without abiding in her accomplishments.
-| 夫唯弗居           | jan wan anu seme?                                           | It is precisely because she does not abide in them
-| 是以不去           | ni la, tawa ala                                             | That they never leave her.
+| 天下<br/>皆知美之为美   | lukin wawa la, jan ale li sona e wawa lukin.                | All in the world recognize the beautiful as beautiful.
+| 斯恶已                  | kule jaki li tan ni.                                        | Herein lies ugliness.
+| 皆知善之为善            | pona la, jan ale li sona e pona.                            | All recognize the good as good.
+| 斯不善已                | pona ala li tan ni.                                         | Herein lies evil.
+| 故有无相生              | sona ni la, jo li open e weka. weka li open e jo.           | Therefore — Presence and absence produce each other.
+| 难易相成                | nasa ike li open e nasa pona. nasa pona li open e nasa ike. | Difficulty and ease bring about each other.
+| 长短相较                | suli li mute e lili. lili li mute e suli.                   | Long and short delimit each other.
+| 高下相倾                | lawa li anpa e noka. noka li anpa e lawa.                   | High and low rest on each other.
+| 音声相和                | kalama li pona tawa mu. mu li pona tawa kalama.             | Sound and voice harmonize each other.
+| 前后相随                | monsi li lawa e sinpin. sinpin li lawa e monsi.             | Front and back follow each other.
+| 是以圣人<br/>处无为之事 | sona ni la, jan sewi li jo kepeken pali ala.                | Therefore the sage abides in the condition of <abbr title="unattached-action">wu-wei</abbr>.
+| 行不言之教              | kin: jan sewi li lawa kepeken nimi ala.                     | And carries out the wordless teaching.
+| 万物作<br/>焉而不辞     | ni li mama e ijo ale. taso la, ijo ale li tu ala.           | Here, the myriad things are made, yet not separated.
+| 生而不有                | ni li mama li jo ala.                                       | Therefore the sage produces without possessing,
+| 为而不恃                | ni li ilo li wile ala.                                      | Acts without expectations
+| 功成而弗居              | ni li pali anu seme?                                        | And accomplishes without abiding in her accomplishments.
+| 夫唯弗居                | jan wan anu seme?                                           | It is precisely because she does not abide in them
+| 是以不去                | ni la, tawa ala.                                            | That they never leave her.
 
 {% include kipisi-nav.html num=2 %}
 
