--- a/lipu-pi-nasin-sewi/20.md
+++ b/lipu-pi-nasin-sewi/20.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 20
+title: lipu nasin la, kipisi nanpa 20 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 19](19)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 21](21)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 20
+绝学无忧。唯之与阿、相去几何。善之与恶、相去若何。人之所畏、不可不畏。荒兮其未央哉。众人煕煕、如享太牢、如春登臺。我独泊兮其未兆、如婴儿之未孩。 儽儽兮若无所归。众人皆有余。而我独若遗。我愚人之心也哉。沌沌兮。俗人昭昭。我独昏昏。俗人察察。我独闷闷。澹兮其若海、 飂 兮若无止。众人皆有以。而我独顽似部。我独异於 人、而贵食母。
 
-絕學無憂。唯之與阿、相去幾何。善之與惡、相去若何。人之所畏、不可不畏。荒兮其未央哉。衆人煕煕、如享太牢、如春登臺。我獨泊兮其未兆、如嬰兒之未孩。 儽儽兮若無所歸。衆人皆有餘。而我獨若遺。我愚人之心也哉。沌沌兮。俗人昭昭。我獨昏昏。俗人察察。我獨悶悶。澹兮其若海、 飂 兮若無止。衆人皆有以。而我獨頑似部。我獨異於 人、而貴食母。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Get rid of “learning” and there will be no anxiety.
 |  |  | How much difference is there between “yes”and “no”?
 |  |  | How far removed from each other are “good” and “evil”?
@@ -36,3 +41,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 20
 |  |  | I enjoy being nourished by the mother.
 
 {% include kipisi-nav.html num=20 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
