--- a/lipu-pi-nasin-sewi/21.md
+++ b/lipu-pi-nasin-sewi/21.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 21
+title: lipu nasin la, kipisi nanpa 21 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 20](20)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 22](22)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 21
+孔德之容、惟道是从。道之为物、惟恍惟惚。惚兮恍兮、其中有象。恍兮惚兮、其中有物。穷兮冥兮、其中有精。其精甚眞、其中有信。自古及今、其名不去、以阅 众甫。吾何以知众甫之状哉。以此。
 
-孔德之容、惟道是從。道之爲物、惟恍惟惚。惚兮恍兮、其中有象。恍兮惚兮、其中有物。窮兮冥兮、其中有精。其精甚眞、其中有信。自古及今、其名不去、以閱 衆甫。吾何以知衆甫之狀哉。以此。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | The form of great virtue is something that only the Way can follow.
 |  |  | The Way as a “thing”is only vague and obscure.
 |  |  | How obscure! How vague! In it there is form.
@@ -20,3 +25,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 21
 |  |  | By this.
 
 {% include kipisi-nav.html num=21 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
