--- a/lipu-pi-nasin-sewi/22.md
+++ b/lipu-pi-nasin-sewi/22.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 22
+title: lipu nasin la, kipisi nanpa 22 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 21](21)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 23](23)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 22
+曲则全。枉则直。洼则盈。敝则新。少则得。多则惑。是以圣人抱一、为天下式。不自见、故明。不自是、故彰。不自伐、故有功 不自务、故长。夫唯不争、故天下莫能与之争。古之所谓曲则全者、岂虚言哉。诚全而归之。
 
-曲則全。枉則直。窪則盈。敝則新。少則得。多則惑。是以聖人抱一、爲天下式。不自見、故明。不自是、故彰。不自伐、故有功 不自務、故長。夫唯不爭、故天下莫能與之爭。古之所謂曲則全者、豈虛言哉。誠全而歸之。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | The imperfect is completed.
 |  |  | The crooked is straightened.
 |  |  | The empty is filled.
@@ -25,3 +30,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 22
 |  |  | Believe in the complete and return to it.
 
 {% include kipisi-nav.html num=22 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
