--- a/lipu-pi-nasin-sewi/23.md
+++ b/lipu-pi-nasin-sewi/23.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 23
+title: lipu nasin la, kipisi nanpa 23 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 22](22)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 24](24)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 23
+希言自然。故飘风不终朝、骤雨不终日。孰为此者。天地。天地尚不能久、而况於人乎。故从事於道者。道者同於道、德者同於德、失者同於失。同於道者、道亦乐 得之。同於德者、德亦乐得之。同於失者、失亦乐得之。信不足焉、有不信焉。
 
-希言自然。故飄風不終朝、驟雨不終日。孰爲此者。天地。天地尚不能久、而況於人乎。故從事於道者。道者同於道、德者同於德、失者同於失。同於道者、道亦樂 得之。同於德者、德亦樂得之。同於失者、失亦樂得之。信不足焉、有不信焉。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | To speak little is natural.
 |  |  | Therefore a gale does not blow a whole morning
 |  |  | Nor does a downpour last a whole day.
@@ -25,3 +30,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 23
 |  |  | If you are untrustworthy, people will not trust you.
 
 {% include kipisi-nav.html num=23 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
