--- a/lipu-pi-nasin-sewi/24.md
+++ b/lipu-pi-nasin-sewi/24.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 24
+title: lipu nasin la, kipisi nanpa 24 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 23](23)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 25](25)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 24
+企者不立。跨者不行。自见者不明。自是者不彰。自伐者无功。\[自矜者不长\]。其在道也、曰余食赘行。物或恶之。故有道者不处。
 
-企者不立。跨者不行。自見者不明。自是者不彰。自伐者無功。\[自矜者不長\]。其在道也、曰餘食贅行。物或惡之。故有道者不處。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Standing on tiptoe, you are unsteady.
 |  |  | Straddle-legged, you cannot go.
 |  |  | If you show yourself, you will not be seen.
@@ -21,3 +26,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 24
 |  |  | Therefore the person of the Way does not act like this.
 
 {% include kipisi-nav.html num=24 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
