--- a/lipu-pi-nasin-sewi/25.md
+++ b/lipu-pi-nasin-sewi/25.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 25
+title: lipu nasin la, kipisi nanpa 25 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 24](24)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 26](26)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 25
+有物混成、先天地生。寂兮寥兮。独立不改、周行而不殆。可以为天下母。吾不知其名。字之曰道。强为之名曰大。大曰逝。逝曰远。远曰反。故道大。天大。地 大。人亦大。域中有四大、而人居其一焉。人法地 地法天 天法道 道法自然。
 
-有物混成、先天地生。寂兮寥兮。獨立不改、周行而不殆。可以爲天下母。吾不知其名。字之曰道。強爲之名曰大。大曰逝。逝曰遠。遠曰反。故道大。天大。地 大。人亦大。域中有四大、而人居其一焉。人法地 地法天 天法道 道法自然。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | There is something that is perfect in its disorder
 |  |  | Which is born before Heaven and Earth.
 |  |  | So silent and desolate! It establishes itself without renewal.
@@ -29,3 +34,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 25
 |  |  | The Way follows things as they are.
 
 {% include kipisi-nav.html num=25 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
