--- a/lipu-pi-nasin-sewi/26.md
+++ b/lipu-pi-nasin-sewi/26.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 26
+title: lipu nasin la, kipisi nanpa 26 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 25](25)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 27](27)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 26
+重为轻根、静为躁君。是以圣人、终日行不离輜重。虽有荣观、燕处超然。奈何万乘之主、而以身轻天下、轻则失本、躁则失君。
 
-重爲輕根、靜爲躁君。是以聖人、終日行不離輜重。雖有榮觀、燕處超然。奈何萬乘之主、而以身輕天下、輕則失本、躁則失君。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Heaviness is the root of lightness.
 |  |  | Composure is the ruler of instability.
 |  |  | Therefore the sage travels all day
@@ -22,3 +27,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 26
 |  |  | If you are unstable, you will lose your rulership.
 
 {% include kipisi-nav.html num=26 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
