--- a/lipu-pi-nasin-sewi/27.md
+++ b/lipu-pi-nasin-sewi/27.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 27
+title: lipu nasin la, kipisi nanpa 27 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 26](26)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 28](28)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 27
+善行无辙迹、善言无瑕謫、善数无用筹策。善闭无关 楗 、而不可开。善结无绳约、而不可解。是以圣人、 常善救人。故无弃人。常善救物。故无弃物。是谓袭明。故善人者、不善人之师、不善人者、善人之资、不贵其师、不爱其资。虽智大迷。是谓要妙。
 
-善行無轍迹、善言無瑕謫、善數無用籌策。善閉無關 楗 、而不可開。善結無繩約、而不可解。是以聖人、 常善救人。故無棄人。常善救物。故無棄物。是謂襲明。故善人者、不善人之師、不善人者、善人之資、不貴其師、不愛其資。雖智大迷。是謂要妙。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | A good traveler leaves no tracks.
 |  |  | Good speech lacks faultfinding.
 |  |  | A good counter needs no calculator.
@@ -26,3 +31,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 27
 |  |  | This is called Essential Subtlety.
 
 {% include kipisi-nav.html num=27 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
