--- a/lipu-pi-nasin-sewi/28.md
+++ b/lipu-pi-nasin-sewi/28.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 28
+title: lipu nasin la, kipisi nanpa 28 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 27](27)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 29](29)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 28
+知其雄、守其雌、为天下谿。为天下谿、常德不离、復归於婴儿。知其白、守其黑、为天下式。为天下式、常德不忒 、復归於无极。知其荣、守其辱、为天下谷。为天下谷、常德乃足、復归於朴。朴散则为器。圣人用之、则为官长。故大制不割。
 
-知其雄、守其雌、爲天下谿。爲天下谿、常德不離、復歸於嬰兒。知其白、守其黑、爲天下式。爲天下式、常德不忒 、復歸於無極。知其榮、守其辱、爲天下谷。爲天下谷、常德乃足、復歸於樸。樸散則爲器。聖人用之、則爲官長。故大制不割。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Know the Masculine, cleave to the Feminine
 |  |  | Be a valley for everyone.
 |  |  | Being a valley for everyone
@@ -30,3 +35,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 28
 [^1]: [Miller:] The “black” is the deep, religious, mystic part of our experience. The “white” is our involvement in mundane affairs. We should well understand how the conventional world operates, but our priority should lie in adhering to deeper principles.
 
 {% include kipisi-nav.html num=28 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
