--- a/lipu-pi-nasin-sewi/29.md
+++ b/lipu-pi-nasin-sewi/29.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 29
+title: lipu nasin la, kipisi nanpa 29 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 28](28)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 30](30)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 29
+將欲取天下而为之、吾见其不得已。天下神器。不可为也。为者败之、执者失之。故物或行或隨、或歔或吹、或强或羸、或载或 隳 。是以圣人、去甚、去奢、去泰。
 
-將欲取天下而爲之、吾見其不得已。天下神器。不可爲也。爲者敗之、執者失之。故物或行或隨、或歔或吹、或強或羸、或載或 隳 。是以聖人、去甚、去奢、去泰。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | If you want to grab the world and run it
 |  |  | I can see that you will not succeed.
 |  |  | The world is a spiritual vessel, which can't be controlled.
@@ -27,3 +32,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 29
 |  |  | Shuns arrogance.
 
 {% include kipisi-nav.html num=29 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
