--- a/lipu-pi-nasin-sewi/3.md
+++ b/lipu-pi-nasin-sewi/3.md
@@ -12,17 +12,17 @@ sidebar:
 
 {:.loseta}
 |:-:|-|-
-| 不尚贤使民不争         | jan li olin ala e jan wawa la: jan ale li wile ala suli. | If you do not adulate the worthy, you will make others non-contentious.
-| 不贵难得之货使民不为盗 | jan li olin ala e ijo mani la: jan ale li alasa ala jo.  | If you do not value rare treasures, you will stop others from stealing.
-| 不见可欲使民心不乱     | jan li lukin ala e ilo alasa la: jan ale li nasa ala.    | If people do not see desirables, they will not be agitated.
-| 是以圣人之治           | jan sewi li lawa la,                                     | Therefore, when the sage governs,
-| 虚其心                 | tenpo ni li nasa ala e pilin pi jan mute.                | He clears people's minds,
-| 实其腹                 | tenpo ni li jo e moku tawa jan mute.                     | Fills their bellies,
-| 弱其志                 | tenpo ni li weka e wile pi jan mute.                     | Weakens their ambition, (and)
-| 强其骨                 | tenpo ni li wawa e sijelo pi jan mute.                   | Strengthens their bones.
-| 常使民无知无欲         | jan pi suno ala en jan pi wile ala la,                   | If the people are kept without cleverness and desire,
-| 使夫知者不敢为也       | jan suno li wile ala nasin.                              | It will make the intellectuals not dare to meddle.
-| 为无为则无不治         | pali e pali ala la: ken lawa e ilo ale.                  | Acting without contrivance, there is no lack of manageability.
+| 不尚贤<br/>使民不争         | jan li olin ala e jan wawa la: jan ale li wile ala suli. | If you do not adulate the worthy, you will make others non-contentious.
+| 不贵难得之货<br/>使民不为盗 | jan li olin ala e ijo mani la: jan ale li alasa ala jo.  | If you do not value rare treasures, you will stop others from stealing.
+| 不见可欲<br/>使民心不乱     | jan li lukin ala e ilo alasa la: jan ale li nasa ala.    | If people do not see desirables, they will not be agitated.
+| 是以圣人之治                | jan sewi li lawa la:                                     | Therefore, when the sage governs,
+| 虚其心                      | tenpo ni li nasa ala e pilin pi jan mute,                | He clears people's minds,
+| 实其腹                      | li jo e moku tawa jan mute,                              | Fills their bellies,
+| 弱其志                      | li weka e wile pi jan mute,                              | Weakens their ambition, (and)
+| 强其骨                      | li wawa e sijelo pi jan mute,                            | Strengthens their bones.
+| 常使民无知无欲              | jan pi suno ala en jan pi wile ala la:                   | If the people are kept without cleverness and desire,
+| 使夫知者<br/>不敢为也       | jan suno li wile ala nasin.                              | It will make the intellectuals not dare to meddle.
+| 为无为<br/>则无不治         | pali e pali ala la: ken lawa e ilo ale.                  | Acting without contrivance, there is no lack of manageability.
 
 {% include kipisi-nav.html num=3 %}
 
@@ -35,13 +35,11 @@ jan li lukin ala e ilo alasa la jan ale li nasa ala.
 {:sitelen data-sitelen-ratio="0.7"}
 
 jan sewi li lawa la:
-{:sitelen data-sitelen-ratio="2"}
-
-tenpo ni li nasa ala e pilin pi jan mute.
-tenpo ni li jo e moku tawa jan mute.
-tenpo ni li weka e wile pi jan mute.
-tenpo ni li wawa e sijelo pi jan mute.
-{:sitelen data-sitelen-ratio="0.5"}
+tenpo ni li nasa ala e pilin pi jan mute,
+li jo e moku tawa jan mute,
+li weka e wile pi jan mute,
+li wawa e sijelo pi jan mute.
+{:sitelen data-sitelen-ratio="1"}
 
 jan pi suno ala, en jan pi wile ala, la jan suno li wile ala nasin.
 pali e pali ala, la ken lawa e ilo ale.
