--- a/lipu-pi-nasin-sewi/31.md
+++ b/lipu-pi-nasin-sewi/31.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 31
+title: lipu nasin la, kipisi nanpa 31 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 30](30)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 32](32)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 31
+夫佳兵者不祥之器、物或恶之。故有道者不处。君子居则贵左、用兵则贵右。兵者不祥之器、非君子之器。不得已而用之、恬淡为上。胜而不美。而美之者、是乐杀 人。夫乐杀人者、则不可以得志於天下矣。吉事尚左、凶事尚右。偏將军居左、上將军居右。言以丧礼处之。杀人之众、以哀悲泣之、战胜以丧礼处之。
 
-夫佳兵者不祥之器、物或惡之。故有道者不處。君子居則貴左、用兵則貴右。兵者不祥之器、非君子之器。不得已而用之、恬淡爲上。勝而不美。而美之者、是樂殺 人。夫樂殺人者、則不可以得志於天下矣。吉事尚左、凶事尚右。偏將軍居左、上將軍居右。言以喪禮處之。殺人之衆、以哀悲泣之、戰勝以喪禮處之。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Sharp weapons are inauspicious instruments.
 |  |  | Everyone hates them.
 |  |  | Therefore the man of the Way is not comfortable with them.
@@ -32,3 +37,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 31
 |  |  | The victors bury them with funerary rites.
 
 {% include kipisi-nav.html num=31 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
