--- a/lipu-pi-nasin-sewi/33.md
+++ b/lipu-pi-nasin-sewi/33.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 33
+title: lipu nasin la, kipisi nanpa 33 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 32](32)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 34](34)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 33
+知人者智、自知者明。胜人者有力、自胜者强。知足者富。强行者有志。不失其所者久。死而不亡者寿。
 
-知人者智、自知者明。勝人者有力、自勝者強。知足者富。強行者有志。不失其所者久。死而不亡者壽。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | If you understand others you are smart.
 |  |  | If you understand yourself you are illuminated.
 |  |  | If you overcome others you are powerful.
@@ -19,3 +24,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 33
 |  |  | If you die without loss, you are eternal.
 
 {% include kipisi-nav.html num=33 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
