--- a/lipu-pi-nasin-sewi/34.md
+++ b/lipu-pi-nasin-sewi/34.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 34
+title: lipu nasin la, kipisi nanpa 34 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 33](33)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 35](35)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 34
+大道氾兮、其可左右。万物恃之而生 而不辞。功成不名有。衣养万物而不为主。常无欲、可名於小。万物归焉而不为主、可名为大。以其终不自为大、故能成其大。
 
-大道氾兮、其可左右。萬物恃之而生 而不辭。功成不名有。衣養萬物而不爲主。常無欲、可名於小。萬物歸焉而不爲主、可名爲大。以其終不自爲大、故能成其大。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | The great Way flows over, spreading in every direction.
 |  |  | The myriad things are produced relying on it, but it does not distinguish them.
 |  |  | It brings them to completion without claiming possession.
@@ -20,3 +25,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 34
 |  |  | Therefore it able to be great.
 
 {% include kipisi-nav.html num=34 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
