--- a/lipu-pi-nasin-sewi/35.md
+++ b/lipu-pi-nasin-sewi/35.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 35
+title: lipu nasin la, kipisi nanpa 35 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 34](34)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 36](36)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 35
+执大象、天下往。往而不害、安平太。乐与饵、过客止。道之出口、淡乎其无味。视之不足见。听之不足闻。用之不可旣。
 
-執大象、天下往。往而不害、安平太。樂與餌、過客止。道之出口、淡乎其無味。視之不足見。聽之不足聞。用之不可旣。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Grasping to the Great Form
 |  |  | All in the world go proceed forth. [^2]
 |  |  | Proceeding forth unharmed, they rest in calm peace.
@@ -23,3 +28,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 35
 [^2]: [Miller:] As far as I can tell, I am the only translator who takes 往 as “going forth” rather than “come.” Where in any other text do we see the rendering of “come”? I take it to mean that if people will hold on to the Dao as they go out in the world, they won't have trouble, and will enjoy peace and calm. This seems to accord with the general message of the Daodejing.
 
 {% include kipisi-nav.html num=35 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
