--- a/lipu-pi-nasin-sewi/36.md
+++ b/lipu-pi-nasin-sewi/36.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 36
+title: lipu nasin la, kipisi nanpa 36 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 35](35)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 37](37)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 36
+將欲歙之、必固张之。將欲弱之、必固强之。將欲废之、必固兴之。將欲夺之、必固与之。是谓微明。柔弱胜刚强。鱼不可脱於渊。国之利器、不可以示人。
 
-將欲歙之、必固張之。將欲弱之、必固強之。將欲廢之、必固興之。將欲奪之、必固與之。是謂微明。柔弱勝剛強。魚不可脫於淵。國之利器、不可以示人。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | That which will be shrunk
 |  |  | Must first be stretched.
 |  |  | That which will be weakened
@@ -24,3 +29,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 36
 |  |  | Should not be shown to its people.
 
 {% include kipisi-nav.html num=36 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
