--- a/lipu-pi-nasin-sewi/37.md
+++ b/lipu-pi-nasin-sewi/37.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 37
+title: lipu nasin la, kipisi nanpa 37 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 36](36)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 38](38)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 37
+道常无为而无不为。侯王若能守之、万物將自化。化而欲作、吾將鎭之以无名之朴。无名之朴、夫亦將无欲。不欲以静、天下將自定。
 
-道常無爲而無不爲。侯王若能守之、萬物將自化。化而欲作、吾將鎭之以無名之樸。無名之樸、夫亦將無欲。不欲以靜、天下將自定。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | The Way is always “not-doing”
 |  |  | Yet there is nothing it doesn't do.
 |  |  | If the rulers are were able to embody it
@@ -21,3 +26,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 37
 |  |  | All-under-Heaven is naturally settled.
 
 {% include kipisi-nav.html num=37 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
