--- a/lipu-pi-nasin-sewi/38.md
+++ b/lipu-pi-nasin-sewi/38.md
@@ -1,13 +1,18 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 38
+title: lipu nasin la, kipisi nanpa 38 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 37](37)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 39](39)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 38
-
-上德不德、是以有德。下德不失德、是以無德。上德無爲而無以爲、下德爲之而有以爲。上仁爲之而無以爲。上義爲之而有以爲。上禮爲之而莫之應、則攘臂而 扔 之。故失道而後、德。失德而後、仁。失仁而後、義。失義而後、禮。夫禮者、忠信之薄、而亂之首。前識者、道之華、而愚之始。是以大丈夫處其厚、不居其薄。處其實、不居其華。 故、去彼、取此。
-
-| Toki Pona | Chinese | English
+上德不德、是以有德。下德不失德、是以无德。上德无为而无以为、下德为之而有以为。上仁为之而无以为。上义为之而有以为。上礼为之而莫之应、则攘臂而 扔 之。故失道而后、德。失德而后、仁。失仁而后、义。失义而后、礼。夫礼者、忠信之薄、而乱之首。前识者、道之华、而愚之始。是以大丈夫处其厚、不居其薄。处其实、不居其华。 故、去彼、取此。
+{:.loseta}
+| Toki Pna | Chinese | English
 |-:|:-:|:-
 |  |  | Superior virtue is not virtuous
 |  |  | Therefore it has virtue.
@@ -37,3 +42,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 38
 |  |  | So let go of that and grasp this.
 
 {% include kipisi-nav.html num=38 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
