--- a/lipu-pi-nasin-sewi/40.md
+++ b/lipu-pi-nasin-sewi/40.md
@@ -1,17 +1,30 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 40
+title: lipu nasin la, kipisi nanpa 40 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 39](39)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 41](41)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 40
+反者道之动。弱者道之用。天下万物生於有、有生於无。
 
-反者道之動。弱者道之用。天下萬物生於有、有生於無。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Return is the motion of the Way.
 |  |  | Softening is its function.
 |  |  | All things in the cosmos arise from being.
 |  |  | Being arises from non-being.
 
 {% include kipisi-nav.html num=40 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
