--- a/lipu-pi-nasin-sewi/41.md
+++ b/lipu-pi-nasin-sewi/41.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 41
+title: lipu nasin la, kipisi nanpa 41 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 40](40)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 42](42)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 41
+上士闻道、勤而行之。中士闻道、若存若亡。下士闻道、大笑之。不笑不足以为道。故建言有之。明道若昧。进道若退。夷道若 纇 。上德若谷。大白若辱。广德若不足。建德若偸。 质眞若渝 大方无隅。大器晩成。大音希声。大象无形。道隱无名 夫唯道、善贷且成。
 
-上士聞道、勤而行之。中士聞道、若存若亡。下士聞道、大笑之。不笑不足以爲道。故建言有之。明道若昧。進道若退。夷道若 纇 。上德若谷。大白若辱。廣德若不足。建德若偸。 質眞若渝 大方無隅。大器晩成。大音希聲。大象無形。道隱無名 夫唯道、善貸且成。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | When superior students hear of the Way
 |  |  | They strive to practice it.
 |  |  | When middling students hear of the Way
@@ -32,3 +37,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 41
 |  |  | This is exactly why the Way is good at developing and perfecting.
 
 {% include kipisi-nav.html num=41 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
