--- a/lipu-pi-nasin-sewi/42.md
+++ b/lipu-pi-nasin-sewi/42.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 42
+title: lipu nasin la, kipisi nanpa 42 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 41](41)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 43](43)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 42
+道生一、一生二、二生三、三生万物。万物负阴而抱阳、冲气以为和。人之所恶、唯孤寡不穀、而王公以为称。故物或损之而益、或益之而损。人之所教、我亦教 之。强梁者不得其死。吾將以为教父。
 
-道生一、一生二、二生三、三生萬物。萬物負陰而抱陽、沖氣以爲和。人之所惡、唯孤寡不穀、而王公以爲稱。故物或損之而益、或益之而損。人之所教、我亦教 之。強梁者不得其死。吾將以爲教父。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | The Way produces one, one produces two.
 |  |  | The two produce the three and the three produce all things.
 |  |  | All things submit to yin and embrace yang.
@@ -23,3 +28,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 42
 |  |  | I regard this as the father of all teachings.
 
 {% include kipisi-nav.html num=42 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
