--- a/lipu-pi-nasin-sewi/43.md
+++ b/lipu-pi-nasin-sewi/43.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 43
+title: lipu nasin la, kipisi nanpa 43 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 42](42)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 44](44)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 43
+天下之至柔、驰骋天下之至坚。无有入无间。吾是以知无为之有益。不言之教、无为之益、天下希及之。
 
-天下之至柔、馳騁天下之至堅。無有入無間。吾是以知無爲之有益。不言之教、無爲之益、天下希及之。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | The softest thing in the world
 |  |  | Will overcome the hardest.
 |  |  | Non-being can enter where there is no space.
@@ -17,3 +22,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 43
 |  |  | Are rarely seen.
 
 {% include kipisi-nav.html num=43 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
