--- a/lipu-pi-nasin-sewi/45.md
+++ b/lipu-pi-nasin-sewi/45.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 45
+title: lipu nasin la, kipisi nanpa 45 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 44](44)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 46](46)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 45
+大成若缺、其用不弊。大盈若冲、其用不穷。大直若屈、大巧若拙、大辩若訥。躁胜寒、静胜热。淸静为天下正。
 
-大成若缺、其用不弊。大盈若沖、其用不窮。大直若屈、大巧若拙、大辯若訥。躁勝寒、靜勝熱。淸靜爲天下正。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Great perfection seems flawed, yet functions without a hitch.
 |  |  | Great fullness seems empty, yet functions without exhaustion.
 |  |  | Great straightness seems crooked,
@@ -18,3 +23,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 45
 |  |  | Clarity and stillness set everything right.
 
 {% include kipisi-nav.html num=45 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
