--- a/lipu-pi-nasin-sewi/46.md
+++ b/lipu-pi-nasin-sewi/46.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 46
+title: lipu nasin la, kipisi nanpa 46 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 45](45)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 47](47)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 46
+天下有道、御走马以粪。天下无道、戎马生於郊。祸莫大於不知足、咎莫大於欲得。故知足之足 常足矣。
 
-天下有道、御走馬以糞。天下無道、戎馬生於郊。禍莫大於不知足、咎莫大於欲得。故知足之足 常足矣。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | When the Way prevails in the land
 |  |  | Fine horses leisurely graze and fertilize the ground.
 |  |  | When the Way is lacking in the land
@@ -18,3 +23,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 46
 |  |  | Therefore the sufficiency that comes from knowing what is enough is an eternal sufficiency.
 
 {% include kipisi-nav.html num=46 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
