--- a/lipu-pi-nasin-sewi/50.md
+++ b/lipu-pi-nasin-sewi/50.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 50
+title: lipu nasin la, kipisi nanpa 50 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 49](49)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 51](51)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 50
+出生、入死。生之徒十有三、死之徒十有三。人之生、动之死地亦十有三。夫何故。以其生生之厚。盖闻、善摄摄生者、陆行不遇 兕 虎、入军不被甲兵。 兕 无所投其角、虎无所措其爪、兵无所容其刃。夫何 故。以其无死地。
 
-出生、入死。生之徒十有三、死之徒十有三。人之生、動之死地亦十有三。夫何故。以其生生之厚。蓋聞、善攝攝生者、陸行不遇 兕 虎、入軍不被甲兵。 兕 無所投其角、虎無所措其爪、兵無所容其刃。夫何 故。以其無死地。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Coming into life and entering death,
 |  |  | The followers of life are three in ten.
 |  |  | The followers of death are three in ten.
@@ -25,3 +30,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 50
 |  |  | Because he has no death-ground.
 
 {% include kipisi-nav.html num=50 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
