--- a/lipu-pi-nasin-sewi/51.md
+++ b/lipu-pi-nasin-sewi/51.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 51
+title: lipu nasin la, kipisi nanpa 51 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 50](50)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 52](52)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 51
+道生之、德畜之、物形之、势成之。是以万物、莫不尊道而贵德。道之尊、德之贵、夫莫之命而常自然。故道生之、德畜之、长之、育之、亭之、毒之、盖之、覆 之。生而不有、为而不恃、长而不宰。是谓玄德
 
-道生之、德畜之、物形之、勢成之。是以萬物、莫不尊道而貴德。道之尊、德之貴、夫莫之命而常自然。故道生之、德畜之、長之、育之、亭之、毒之、蓋之、覆 之。生而不有、爲而不恃、長而不宰。是謂玄德
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Way gives birth to it,
 |  |  | Virtue rears it,
 |  |  | Materiality shapes it,
@@ -24,3 +29,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 51
 |  |  | This is called “Mysterious Virtue.”
 
 {% include kipisi-nav.html num=51 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
