--- a/lipu-pi-nasin-sewi/52.md
+++ b/lipu-pi-nasin-sewi/52.md
@@ -1,15 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 52
+title: lipu nasin la, kipisi nanpa 52 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 51](51)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 53](53)
+      {:.kipisi-nav-sidebar}
 ---
 
+天下有始、以为天下母。旣得其母、以知其子、旣知其子、復守其母、没身不殆。塞其兑、闭其门、终身不勤。开其兑、济其事、终身不救。见小曰明、守柔日强。 用其光、復归其明、无遗身殃。是为习常。
 
-## kipisi nanpa 52
-
-天下有始、以爲天下母。旣得其母、以知其子、旣知其子、復守其母、没身不殆。塞其兌、閉其門、終身不勤。開其兌、濟其事、終身不救。見小曰明、守柔日強。 用其光、復歸其明、無遺身殃。是爲習常。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | All things have a beginning, which we can regard as their Mother.
 |  |  | Knowing the mother, we can know its children.
 |  |  | Knowing the children, yet still cleaving to the mother
@@ -27,3 +31,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 52
 |  |  | This is called “practicing the eternal.”
 
 {% include kipisi-nav.html num=52 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
