--- a/lipu-pi-nasin-sewi/53.md
+++ b/lipu-pi-nasin-sewi/53.md
@@ -1,16 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 53
+title: lipu nasin la, kipisi nanpa 53 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 52](52)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 54](54)
+      {:.kipisi-nav-sidebar}
 ---
 
+使我介然有知、行於大道、唯施是畏。大道甚夷、而民好径。朝甚除、田甚芜、仓甚虚。服文綵、带利剑、厌飫食、財货有余。是谓盗夸。非道也哉。
 
-
-## kipisi nanpa 53
-
-使我介然有知、行於大道、唯施是畏。大道甚夷、而民好徑。朝甚除、田甚蕪、倉甚虛。服文綵、帶利劍、厭飫食、財貨有餘。是謂盜夸。非道也哉。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | If I had just a little bit of wisdom
 |  |  | I should walk the Great Path and fear only straying from it.
 |  |  | Though the Way is quite broad
@@ -26,3 +29,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 53
 |  |  | This is definitely not the Way.
 
 {% include kipisi-nav.html num=53 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
