--- a/lipu-pi-nasin-sewi/56.md
+++ b/lipu-pi-nasin-sewi/56.md
@@ -1,18 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 56
+title: lipu nasin la, kipisi nanpa 56 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 55](55)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 57](57)
+      {:.kipisi-nav-sidebar}
 ---
 
+知者不言、言者不知。塞其兑 闭其门 挫其锐 解其纷 和其光 同其尘。是谓玄同。故不可得而亲、不可得而疏。不可得而利、不可得而害。不可得而贵、不可得而贱。故为天下贵。
 
-
-
-
-## kipisi nanpa 56
-
-知者不言、言者不知。塞其兌 閉其門 挫其銳 解其紛 和其光 同其塵。是謂玄同。故不可得而親、不可得而疏。不可得而利、不可得而害。不可得而貴、不可得而賤。故爲天下貴。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | One who knows does not speak.
 |  |  | One who speaks does not know.
 |  |  | Close your holes, shut your doors,
@@ -28,3 +29,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 56
 |  |  | Therefore the world values you.
 
 {% include kipisi-nav.html num=56 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
