--- a/lipu-pi-nasin-sewi/57.md
+++ b/lipu-pi-nasin-sewi/57.md
@@ -1,18 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 57
+title: lipu nasin la, kipisi nanpa 57 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 56](56)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 58](58)
+      {:.kipisi-nav-sidebar}
 ---
 
+以正治国、以奇用兵、以无事取天下。吾何以知其然哉。以此。天下多忌讳、而民弥贫。民多利器、国家滋昏。人多伎巧、奇物滋起。法令滋彰、盗贼多有。故圣人 云、我无为而民自化。我好静而民自正。我无事而民自富。我无欲而民自朴。
 
-
-
-
-## kipisi nanpa 57
-
-以正治國、以奇用兵、以無事取天下。吾何以知其然哉。以此。天下多忌諱、而民彌貧。民多利器、國家滋昏。人多伎巧、奇物滋起。法令滋彰、盜賊多有。故聖人 云、我無爲而民自化。我好靜而民自正。我無事而民自富。我無欲而民自樸。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Use fairness in governing the state.
 |  |  | Use surprise tactics in war.
 |  |  | Be unconcerned and you will have the world.
@@ -34,3 +35,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 57
 |  |  | And the people find their original mind.
 
 {% include kipisi-nav.html num=57 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
