--- a/lipu-pi-nasin-sewi/60.md
+++ b/lipu-pi-nasin-sewi/60.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 60
+title: lipu nasin la, kipisi nanpa 60 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 59](59)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 61](61)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 60
+治大国、若烹小鲜。以道莅天下、其鬼不神 非其鬼不神、其神不伤人。非其神不伤人、圣人亦不伤人。夫两不相伤。故德交归焉。
 
-治大國、若烹小鮮。以道莅天下、其鬼不神 非其鬼不神、其神不傷人。非其神不傷人、聖人亦不傷人。夫兩不相傷。故德交歸焉。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Governing a large country is like cooking a small fish. [^4]
 |  |  | When you govern people with the Way
 |  |  | Unhappy ghosts [^5] will have no power. [^6]
@@ -25,3 +30,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 60
 [^7]: The interpretation of this final line varies widely among translators; we decided to try to remain terse and close to the literal meaning here.
 
 {% include kipisi-nav.html num=60 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
