--- a/lipu-pi-nasin-sewi/61.md
+++ b/lipu-pi-nasin-sewi/61.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 61
+title: lipu nasin la, kipisi nanpa 61 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 60](60)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 62](62)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 61
+大国者下流。天下之交。天下之牝。牝常以静胜牡。以静为下。故大国以下小国、则取小国。小国以下大国、则取大国。故或下以取、或下而取。大国不过欲兼畜 人、小国不过欲入事人。夫两者各得其所欲。大者宜为下。
 
-大國者下流。天下之交。天下之牝。牝常以靜勝牡。以靜爲下。故大國以下小國、則取小國。小國以下大國、則取大國。故或下以取、或下而取。大國不過欲兼畜 人、小國不過欲入事人。夫兩者各得其所欲。大者宜爲下。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | The great state should be like a river basin.
 |  |  | The mixing place of the world,
 |  |  | The feminine of the world.
@@ -28,3 +33,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 61
 |  |  | Greatness lies in placing oneself below.
 
 {% include kipisi-nav.html num=61 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
