--- a/lipu-pi-nasin-sewi/66.md
+++ b/lipu-pi-nasin-sewi/66.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 66
+title: lipu nasin la, kipisi nanpa 66 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 65](65)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 67](67)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 66
+江海所以能为百谷王者、以其善下之。故能为百谷王。是以欲上民、必以言下之、欲先民、必以身后之。是以圣人、处上而民不重、处前而民不害。是以天下乐推而 不厌。以其不争故、天下莫能与之争。
 
-江海所以能爲百谷王者、以其善下之。故能爲百谷王。是以欲上民、必以言下之、欲先民、必以身後之。是以聖人、處上而民不重、處前而民不害。是以天下樂推而 不厭。以其不爭故、天下莫能與之爭。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | The reason the river and sea can be regarded as
 |  |  | The rulers of all the valley streams
 |  |  | Is because of their being below them.
@@ -25,3 +30,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 66
 |  |  | No one can contend with him.
 
 {% include kipisi-nav.html num=66 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
