--- a/lipu-pi-nasin-sewi/67.md
+++ b/lipu-pi-nasin-sewi/67.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 67
+title: lipu nasin la, kipisi nanpa 67 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 66](66)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 68](68)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 67
+天下皆谓我道大似不肖。夫唯大、故似不肖。若肖、久矣、其细也夫。我有三宝、持而保之。一日慈、二日俭、三日不敢为天下先。慈、故能勇。俭、故能广。不敢 为天下先、故能成器长。今舍慈且勇、舍俭且广、舍后且先、死矣。夫慈以战则胜、以守则固 天將救之、以慈衞之。
 
-天下皆謂我道大似不肖。夫唯大、故似不肖。若肖、久矣、其細也夫。我有三寶、持而保之。一日慈、二日儉、三日不敢爲天下先。慈、故能勇。儉、故能廣。不敢 爲天下先、故能成器長。今舍慈且勇、舍儉且廣、舍後且先、死矣。夫慈以戰則勝、以守則固 天將救之、以慈衞之。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | The reason everybody calls my Way great
 |  |  | Is because there is nothing quite like it.
 |  |  | It is exactly because it isgreat
@@ -33,3 +38,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 67
 |  |  | Protecting you with compassion.
 
 {% include kipisi-nav.html num=67 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
