--- a/lipu-pi-nasin-sewi/69.md
+++ b/lipu-pi-nasin-sewi/69.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 69
+title: lipu nasin la, kipisi nanpa 69 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 68](68)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 70](70)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 69
+用兵有言、吾不敢为主而为客、不敢进寸而退尺。是谓行无行、攘无臂、 扔 无敌、执无兵。祸莫大於轻敌。轻敌几丧吾宝。故 抗兵相如、哀者胜矣。
 
-用兵有言、吾不敢爲主而爲客、不敢進寸而退尺。是謂行無行、攘無臂、 扔 無敵、執無兵。禍莫大於輕敵。輕敵幾喪吾寶。故 抗兵相如、哀者勝矣。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Strategists have a saying:
 |  |  | I prefer to be able to move, rather than be in a fixed position
 |  |  | I prefer to retreat a foot rather than advancing an inch.
@@ -24,3 +29,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 69
 |  |  | The one who is sorry about it will be the winner.
 
 {% include kipisi-nav.html num=69 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
