--- a/lipu-pi-nasin-sewi/71.md
+++ b/lipu-pi-nasin-sewi/71.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 71
+title: lipu nasin la, kipisi nanpa 71 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 70](70)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 72](72)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 71
+知不知上、不知知病。夫唯病病、是以不病。圣人不病、以其病病。是以不病
 
-知不知上、不知知病。夫唯病病、是以不病。聖人不病、以其病病。是以不病
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | There is nothing better than to know that you don't know.
 |  |  | Not knowing, yet thinking you know—
 |  |  | This is sickness.
@@ -19,3 +24,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 71
 |  |  | Therefore she is not sick.
 
 {% include kipisi-nav.html num=71 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
