--- a/lipu-pi-nasin-sewi/72.md
+++ b/lipu-pi-nasin-sewi/72.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 72
+title: lipu nasin la, kipisi nanpa 72 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 71](71)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 73](73)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 72
+民不畏威、则大威至。无狎其所居、无厌其所生。夫唯不厌、是以不厌。是以圣人、自知不自见、自爱不自贵。故去彼取此。
 
-民不畏威、則大威至。無狎其所居、無厭其所生。夫唯不厭、是以不厭。是以聖人、自知不自見、自愛不自貴。故去彼取此。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | When the people do not fear your might
 |  |  | Then your might has truly become great.
 |  |  | Don't interfere with their household affairs.
@@ -22,3 +27,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 72
 |  |  | And takes this.
 
 {% include kipisi-nav.html num=72 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
