--- a/lipu-pi-nasin-sewi/73.md
+++ b/lipu-pi-nasin-sewi/73.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 73
+title: lipu nasin la, kipisi nanpa 73 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 72](72)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 74](74)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 73
+勇於敢则杀、勇於不敢则活。此两者或利、或害。天之所恶、孰知其故。是以圣人犹难之。天之道不争而善胜、不言而善应、不召而自来、 繟 然而善谋。天网恢恢、疏而不失。
 
-勇於敢則殺、勇於不敢則活。此兩者或利、或害。天之所惡、孰知其故。是以聖人猶難之。天之道不爭而善勝、不言而善應、不召而自來、 繟 然而善謀。天網恢恢、疏而不失。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | If you are courageous in daring you will die.
 |  |  | If you are courageous in not-daring you will live.
 |  |  | Among these two, one is beneficial and the other is harmful.
@@ -23,3 +28,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 73
 |  |  | Yet nothing slips through.
 
 {% include kipisi-nav.html num=73 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
