--- a/lipu-pi-nasin-sewi/74.md
+++ b/lipu-pi-nasin-sewi/74.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 74
+title: lipu nasin la, kipisi nanpa 74 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 73](73)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 75](75)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 74
+民不畏死、奈何以死惧之。若使民常畏死、而为奇者、吾得执而杀之、执敢。常有司杀者杀。夫代司杀者杀、是谓代大匠 斵 。夫代大匠断者、希有不伤其手矣。
 
-民不畏死、奈何以死懼之。若使民常畏死、而爲奇者、吾得執而殺之、執敢。常有司殺者殺。夫代司殺者殺、是謂代大匠 斵 。夫代大匠斷者、希有不傷其手矣。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | If the people don't fear death
 |  |  | How will you scare them with death?
 |  |  | If you make the people continuously fear death
@@ -21,3 +26,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 74
 |  |  | There are few who will not cut their hands.
 
 {% include kipisi-nav.html num=74 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
