--- a/lipu-pi-nasin-sewi/75.md
+++ b/lipu-pi-nasin-sewi/75.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 75
+title: lipu nasin la, kipisi nanpa 75 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 74](74)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 76](76)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 75
+民之饥、以其上食税之多。是以饥。民之难治、以其上之有为。是以难治。民之轻死、以其上求生之厚。是以轻死。夫唯无以生为者、是贤於贵生。
 
-民之饑、以其上食税之多。是以饑。民之難治、以其上之有爲。是以難治。民之輕死、以其上求生之厚。是以輕死。夫唯無以生爲者、是賢於貴生。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | The reason people starve
 |  |  | Is because their rulers tax them excessively.
 |  |  | They are difficult to govern
@@ -20,3 +25,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 75
 |  |  | That you can go beyond valuing life.
 
 {% include kipisi-nav.html num=75 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
