--- a/lipu-pi-nasin-sewi/76.md
+++ b/lipu-pi-nasin-sewi/76.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 76
+title: lipu nasin la, kipisi nanpa 76 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 75](75)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 77](77)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 76
+人之生也柔弱、其死也坚强。草木之生也柔脆、其死也枯稿。故坚强者死之徒、柔弱者生之徒。是以兵强则灭、木强则折。强大处下、柔弱处上。
 
-人之生也柔弱、其死也堅強。草木之生也柔脆、其死也枯稿。故堅強者死之徒、柔弱者生之徒。是以兵強則滅、木強則折。強大處下、柔弱處上。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | When people are born they are gentle and soft.
 |  |  | At death they are hard and stiff.
 |  |  | When plants are alive they are soft and delicate.
@@ -21,3 +26,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 76
 |  |  | The gentle and soft are greater.
 
 {% include kipisi-nav.html num=76 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
