--- a/lipu-pi-nasin-sewi/77.md
+++ b/lipu-pi-nasin-sewi/77.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 77
+title: lipu nasin la, kipisi nanpa 77 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 76](76)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 78](78)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 77
+天之道其犹张弓与。高者抑之、下者擧之。有余者损之 不足者补之。天之道损有余而补不足。人之道则不然、损不足以奉有余。孰能有余以奉天下。唯有道者。是以圣人、为而不侍、功成而不处、其不欲见贤。
 
-天之道其猶張弓與。高者抑之、下者擧之。有餘者損之 不足者補之。天之道損有餘而補不足。人之道則不然、損不足以奉有餘。孰能有餘以奉天下。唯有道者。是以聖人、爲而不侍、功成而不處、其不欲見賢。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | The Way of Heaven
 |  |  | Is like stretching a bow.
 |  |  | The top is pulled down,
@@ -28,3 +33,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 77
 |  |  | Does not want to show his virtue.
 
 {% include kipisi-nav.html num=77 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
