--- a/lipu-pi-nasin-sewi/78.md
+++ b/lipu-pi-nasin-sewi/78.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 78
+title: lipu nasin la, kipisi nanpa 78 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 77](77)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 79](79)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 78
+天下莫柔弱於水。而攻坚强者莫之能胜 以其无以易之。弱之胜强、柔之胜刚、天下莫不知、莫能行。是以圣人云、受国之垢、是谓社稷主、受国不祥、是为天下王。正言若反。
 
-天下莫柔弱於水。而攻堅強者莫之能勝 以其無以易之。弱之勝強、柔之勝剛、天下莫不知、莫能行。是以聖人云、受國之垢、是謂社稷主、受國不祥、是爲天下王。正言若反。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Nothing in the world is softer than water,
 |  |  | Yet nothing is better at overcoming the hard and strong.
 |  |  | This is because nothing can alter it.
@@ -24,3 +29,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 78
 |  |  | Truth seems contradictory.
 
 {% include kipisi-nav.html num=78 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
