--- a/lipu-pi-nasin-sewi/79.md
+++ b/lipu-pi-nasin-sewi/79.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 79
+title: lipu nasin la, kipisi nanpa 79 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 78](78)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 80](80)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 79
+和大怨必有余怨。安可以为善。是以圣人执左契而不责於人。有德司契、无德司彻。天道无亲、常与善人。
 
-和大怨必有餘怨。安可以爲善。是以聖人執左契而不責於人。有德司契、無德司徹。天道無親、常與善人。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | After settling down for great anger
 |  |  | There are always resentments left over.
 |  |  | How can this be considered as good?
@@ -24,3 +29,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 79
 [^10]: Cf. Analects 4:10: The Master said: “When the noble man deals with the world he is not prejudiced for or against anything. He does what is Right.” 子曰。君子之於天下也、無適也、無莫也、義之與比。
 
 {% include kipisi-nav.html num=79 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
