--- a/lipu-pi-nasin-sewi/9.md
+++ b/lipu-pi-nasin-sewi/9.md
@@ -13,7 +13,7 @@ sidebar:
 {:.loseta}
 |:-:|-|-
 | 持而盈之不如其已 |  | To hold until full is not as good as stopping.
-| 揣而棁之不可长保 |  | An oversharpened sword cannot last long.
+| 揣而锐之不可长保 |  | An oversharpened sword cannot last long.
 | 金玉满堂莫之能守 |  | A room filled with gold and jewels cannot be protected.
 | 富贵而骄自遗其咎 |  | Boasting of wealth and virtue brings your demise.
 | 功遂身退         |  | After finishing the work, withdraw.
