--- a/lipu-pi-nasin-sewi/11.md
+++ b/lipu-pi-nasin-sewi/11.md
@@ -1,21 +1,32 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 11
+title: lipu nasin la, kipisi nanpa 11 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 10](10)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 12](12)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 11
-
-三十覇共一穀。當其無、有車之用。挺埴以爲器。當其無、有器之用。盤戶漏以爲室。當其無、有室之用。故有之以爲利、無之以爲用。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
-|  |  | Thirty spokes join together in the hub.
-|  |  | It is because of what is not there that the cart is useful.
-|  |  | Clay is formed into a vessel.
-|  |  | It is because of its emptiness that the vessel is useful.
-|  |  | Cut doors and windows to make a room.
-|  |  | It is because of its emptiness that the room is useful.
-|  |  | Therefore, what is present is used for profit.
-|  |  | But it is in absence that there is usefulness.
+{:.loseta}
+|:-:|-|-
+| 三十辐共一毂   |  | Thirty spokes join together in the hub.
+| 当其无有车之用 |  | It is because of what is not there that the cart is useful.
+| 挺埴以为器     |  | Clay is formed into a vessel.
+| 当其无有器之用 |  | It is because of its emptiness that the vessel is useful.
+| 盘户漏以为室   |  | Cut doors and windows to make a room.
+| 当其无有室之用 |  | It is because of its emptiness that the room is useful.
+| 故有之以为利   |  | Therefore, what is present is used for profit.
+| 无之以为用     |  | But it is in absence that there is usefulness.
 
 {% include kipisi-nav.html num=11 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
