--- a/lipu-pi-nasin-sewi/15.md
+++ b/lipu-pi-nasin-sewi/15.md
@@ -1,31 +1,42 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 15
+title: lipu nasin la, kipisi nanpa 15 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 14](14)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 16](16)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 15
-
-古之善爲士者、微妙玄通、深不可識。夫唯不可識、故強爲之容。豫兮若冬渉川。猶兮若畏四鄰。儼兮其若客。渙兮若冰之將釋。敦兮其若樸。曠兮其若谷。混兮其若濁。孰能濁以靜之徐淸。孰能安以動之徐生。保此道者、不欲盈。夫唯不盈、故能蔽不新成。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
-|  |  | The ancient masters of the Way
-|  |  | Had subtle marvelous mystic penetration
-|  |  | A depth that cannot be known.
-|  |  | It is exactly because that they are unknowable
-|  |  | That we are forced to pay attention to their appearance.
-|  |  | Hesitant, like one crossing an ice-covered river.
-|  |  | Ready, like one afraid of his neighbors on all sides.
-|  |  | Dignified, like a guest.
-|  |  | Loose, like ice about to melt.
-|  |  | Straightforward, like an uncarved block of wood.
-|  |  | Open, like a valley.
-|  |  | Obscure, like muddy water.
-|  |  | Who can be muddled, and use clarity to gradually become lucid?
-|  |  | Who can be calm, and use constant application for eventual success?
-|  |  | The one who holds to this path does not crave fulfillment.
-|  |  | Precisely because he does not crave fulfillment
-|  |  | He can be shattered
-|  |  | And do without quick restitution.
+{:.loseta}
+|:-:|-|-
+| 古之善为士者     |  | The ancient masters of the Way
+| 微妙玄通         |  | Had subtle marvelous mystic penetration
+| 深不可识         |  | A depth that cannot be known.
+| 夫唯不可识       |  | It is exactly because that they are unknowable
+| 故强为之容       |  | That we are forced to pay attention to their appearance.
+| 豫兮若冬渉川     |  | Hesitant, like one crossing an ice-covered river.
+| 犹兮若畏四邻     |  | Ready, like one afraid of his neighbors on all sides.
+| 儼兮其若客       |  | Dignified, like a guest.
+| 涣兮若冰之將释   |  | Loose, like ice about to melt.
+| 敦兮其若朴       |  | Straightforward, like an uncarved block of wood.
+| 旷兮其若谷       |  | Open, like a valley.
+| 混兮其若浊       |  | Obscure, like muddy water.
+| 孰能浊以静之徐淸 |  | Who can be muddled, and use clarity to gradually become lucid?
+| 孰能安以动之徐生 |  | Who can be calm, and use constant application for eventual success?
+| 保此道者         |  | The one who holds to this path does not crave fulfillment.
+| 不欲盈           |  | Precisely because he does not crave fulfillment
+| 夫唯不盈         |  | He can be shattered
+| 故能蔽不新成     |  | And do without quick restitution.
 
 {% include kipisi-nav.html num=15 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
