--- a/lipu-pi-nasin-sewi/30.md
+++ b/lipu-pi-nasin-sewi/30.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 30
+title: lipu nasin la, kipisi nanpa 30 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 29](29)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 31](31)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 30
+以道佐人主者、不以兵强天下。其事好还。师之所处、荆棘生焉。大军之后、必有凶年。善者果而已。不敢以取强。果而勿矜、果而勿伐、果而勿骄。果而不得已、 果而勿强。物壮则老、是谓不道。不道早已。
 
-以道佐人主者、不以兵強天下。其事好還。師之所處、荊棘生焉。大軍之後、必有凶年。善者果而已。不敢以取強。果而勿矜、果而勿伐、果而勿驕。果而不得已、 果而勿強。物壯則老、是謂不道。不道早已。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | If you used the Way as a principle for ruling
 |  |  | You would not dominate the people by military force.
 |  |  | What goes around comes around.
@@ -28,3 +33,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 30
 |  |  | The non-Way is short-lived.
 
 {% include kipisi-nav.html num=30 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
