--- a/lipu-pi-nasin-sewi/32.md
+++ b/lipu-pi-nasin-sewi/32.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 32
+title: lipu nasin la, kipisi nanpa 32 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 31](31)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 33](33)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 32
+道常无名 朴虽小、天下莫能臣也。侯王若能守之、万物將自宾。天地相合、以降甘露。民莫之令而自均。始制有名。名亦旣有、夫亦將知止。知止所以不殆。譬道之在天下、犹川谷 之於江海。
 
-道常無名 樸雖小、天下莫能臣也。侯王若能守之、萬物將自賓。天地相合、以降甘露。民莫之令而自均。始制有名。名亦旣有、夫亦將知止。知止所以不殆。譬道之在天下、猶川谷 之於江海。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | The Way is always nameless.
 |  |  | And even though a sapling might be small
 |  |  | No one can make it be his subject.
@@ -25,3 +30,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 32
 |  |  | Is like valley streams running into the rivers and seas.
 
 {% include kipisi-nav.html num=32 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
