--- a/lipu-pi-nasin-sewi/39.md
+++ b/lipu-pi-nasin-sewi/39.md
@@ -1,13 +1,18 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 39
+title: lipu nasin la, kipisi nanpa 39 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 38](38)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 40](40)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 39
-
-昔之得一者。天得一以淸、地得一以寧、神得一以靈、谷得一以盈、萬物得一以生、侯王得一以爲天下貞。其致之、一也。天無以淸將恐裂。地無以寧將恐發。神無以靈將恐歇。谷無以盈將恐竭。萬物無以生將恐滅。侯王無以貞將恐蹶。故貴以賤爲本、高以下爲基。是以侯王自謂孤寡不穀。此非以賤爲本邪。非乎。故致數輿無輿。不欲琭琭如玉、珞珞如石。
-
-| Toki Pona | Chinese | English
+昔之得一者。天得一以淸、地得一以寧、神得一以灵、谷得一以盈、万物得一以生、侯王得一以为天下贞。其致之、一也。天无以淸將恐裂。地无以寧將恐发。神无以灵將恐歇。谷无以盈將恐竭。万物无以生將恐灭。侯王无以贞將恐蹶。故贵以贱为本、高以下为基。是以侯王自谓孤寡不穀。此非以贱为本邪。非乎。故致数舆无舆。不欲琭琭如玉、珞珞如石。
+{:.loseta}
+| Toki Pna | Chinese | English
 |-:|:-:|:-
 |  |  | These in the past have attained wholeness:
 |  |  | Heaven attains wholeness with its clarity;
@@ -33,3 +38,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 39
 |  |  | Or the manyness of grains of sand.
 
 {% include kipisi-nav.html num=39 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
