--- a/lipu-pi-nasin-sewi/4.md
+++ b/lipu-pi-nasin-sewi/4.md
@@ -12,17 +12,17 @@ sidebar:
 
 {:.loseta}
 |:-:|-|-
-| 道冲而用之或不盈 | nasin sewi li suli mute. jan li ken ala pali weka e ona. | The Way is so vast that when you use it, something is always left.
-| 渊兮             | suli a!                           | How deep it is!
-| 似万物之宗       | ona li mama e ijo ale.            | It seems to be the ancestor of the myriad things.
-| 挫其锐           | ona li suwi e wawa.               | It blunts sharpness
-| 解其纷           | ona li pona e jaki.               | Untangles knots
-| 和其光           | ona li kon e kiwen.               | Softens the glare
-| 同其尘           | ona li wan e tu.                  | Unifies with the mundane.
-| 湛兮             | wawa a!                           | It is so full!
-| 似或存           | tenpo kama la ona li lon.         | It seems to have remainder.
-| 吾不知谁之子     | mi suno ala la: seme li mama ona? | It is the child of I-don't-know-who.
-| 象帝之先         | ona li mama e jan lawa wawa.      | And prior to the primeval Lord-on-high.
+| 道冲而用<br/>之或不盈 | nasin sewi li suli mute. jan li ken ala pali weka e ona. | The Way is so vast that when you use it, something is always left.
+| 渊兮                  | suli a!                                                  | How deep it is!
+| 似万物之宗            | ona li mama e ijo ale.                                   | It seems to be the ancestor of the myriad things.
+| 挫其锐                | ona li suwi e wawa.                                      | It blunts sharpness
+| 解其纷                | ona li pona e jaki.                                      | Untangles knots
+| 和其光                | ona li kon e kiwen.                                      | Softens the glare
+| 同其尘                | ona li wan e tu.                                         | Unifies with the mundane.
+| 湛兮                  | wawa a!                                                  | It is so full!
+| 似或存                | tenpo kama la ona li lon.                                | It seems to have remainder.
+| 吾不知<br/>谁之子     | mi suno ala la: seme li mama ona?                        | It is the child of I-don't-know-who.
+| 象帝之先              | ona li mama e jan lawa wawa.                             | And prior to the primeval Lord-on-high.
 
 {% include kipisi-nav.html num=4 %}
 
