--- a/lipu-pi-nasin-sewi/44.md
+++ b/lipu-pi-nasin-sewi/44.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 44
+title: lipu nasin la, kipisi nanpa 44 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 43](43)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 45](45)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 44
+名与身孰亲 身与货孰多。得与亡孰病。是故甚爱必大费、多藏必厚亡。知足不辱、知止不殆、可以长久。
 
-名與身孰親 身與貨孰多。得與亡孰病。是故甚愛必大費、多藏必厚亡。知足不辱、知止不殆、可以長久。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Which is dearer, fame or your life?
 |  |  | Which is greater, your life or possessions?
 |  |  | Which is more painful, gain or loss?
@@ -19,3 +24,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 44
 |  |  | And can be long-lasting.
 
 {% include kipisi-nav.html num=44 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
