--- a/lipu-pi-nasin-sewi/47.md
+++ b/lipu-pi-nasin-sewi/47.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 47
+title: lipu nasin la, kipisi nanpa 47 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 46](46)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 48](48)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 47
+不出户、知天下。不闚牖、见天道。其出弥远、其知弥少。是以圣人不行而知、不见而名、不为而成。
 
-不出戶、知天下。不闚牖、見天道。其出彌遠、其知彌少。是以聖人不行而知、不見而名、不爲而成。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Without going out the door, knowing everything,
 |  |  | Without peeking out the window shades, seeing the Way of Heaven.
 |  |  | The further you go, the less you know.
@@ -20,3 +25,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 47
 [^3]: The commentarial tradition reads 名 as meaning 明.
 
 {% include kipisi-nav.html num=47 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
