--- a/lipu-pi-nasin-sewi/48.md
+++ b/lipu-pi-nasin-sewi/48.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 48
+title: lipu nasin la, kipisi nanpa 48 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 47](47)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 49](49)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 48
+为学日益、为道日损。损之又损、以至於无为。无为而无不为。取天下常以无事。及其有事、不足以取天下。
 
-爲學日益、爲道日損。損之又損、以至於無爲。無爲而無不爲。取天下常以無事。及其有事、不足以取天下。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | In studying, each day something is gained.
 |  |  | In following the Way, each day something is lost.
 |  |  | Lost and again lost.
@@ -19,3 +24,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 48
 |  |  | You can never possess the world.
 
 {% include kipisi-nav.html num=48 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
