--- a/lipu-pi-nasin-sewi/49.md
+++ b/lipu-pi-nasin-sewi/49.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 49
+title: lipu nasin la, kipisi nanpa 49 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 48](48)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 50](50)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 49
+圣人无常心。以百姓心为心。善者吾善之、不善者吾亦善之。德善。信者吾信之、不信者吾亦信之。德信。圣人在天下、歙歙为天下浑其心。百姓皆注其耳目。圣人 皆孩之。
 
-聖人無常心。以百姓心爲心。善者吾善之、不善者吾亦善之。德善。信者吾信之、不信者吾亦信之。德信。聖人在天下、歙歙爲天下渾其心。百姓皆注其耳目。聖人 皆孩之。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | The sage has no fixed mind,
 |  |  | She takes the mind of the people as her mind.
 |  |  | I treat the good as good, I also treat the evil as good.
@@ -20,3 +25,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 49
 |  |  | The sages treat them as their little children.
 
 {% include kipisi-nav.html num=49 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
