--- a/lipu-pi-nasin-sewi/54.md
+++ b/lipu-pi-nasin-sewi/54.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 54
+title: lipu nasin la, kipisi nanpa 54 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 53](53)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 55](55)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 54
+善建者不拔、善抱者不脱。子孙以祭祀不輟。修之於身、其德乃眞。修之於家、其德乃余。修之於鄕、其德乃长。修之於国、其德乃丰。修之於天下、其德乃普。故 以身观身、以家观家、以鄕观鄕、以国观国、以天下观天下。吾何以知天下然哉。以此。
 
-善建者不拔、善抱者不脫。子孫以祭祀不輟。修之於身、其德乃眞。修之於家、其德乃餘。修之於鄕、其德乃長。修之於國、其德乃豐。修之於天下、其德乃普。故 以身觀身、以家觀家、以鄕觀鄕、以國觀國、以天下觀天下。吾何以知天下然哉。以此。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | The well-established cannot be uprooted.
 |  |  | The well-grasped does not slip away.
 |  |  | Generation after generation carries out the ancestor worship without break.
@@ -26,3 +31,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 54
 |  |  | By this.
 
 {% include kipisi-nav.html num=54 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
