--- a/lipu-pi-nasin-sewi/58.md
+++ b/lipu-pi-nasin-sewi/58.md
@@ -1,18 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 58
+title: lipu nasin la, kipisi nanpa 58 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 57](57)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 59](59)
+      {:.kipisi-nav-sidebar}
 ---
 
+其政闷闷、其民淳淳。其政察察、其民缺缺。祸兮福之所倚、福兮祸之所伏。孰知其极。其无正。正復为奇、善復为妖。人之迷、其日固久。是以圣人方而不割、廉 而不 劌 、直而不肆、光而不耀。
 
-
-
-
-## kipisi nanpa 58
-
-其政悶悶、其民淳淳。其政察察、其民缺缺。禍兮福之所倚、福兮禍之所伏。孰知其極。其無正。正復爲奇、善復爲妖。人之迷、其日固久。是以聖人方而不割、廉 而不 劌 、直而不肆、光而不耀。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | When the government is laid back
 |  |  | The people are relaxed.
 |  |  | When the government is nitpicking
@@ -30,3 +31,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 58
 |  |  | Shines but does not glare.
 
 {% include kipisi-nav.html num=58 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
