--- a/lipu-pi-nasin-sewi/59.md
+++ b/lipu-pi-nasin-sewi/59.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 59
+title: lipu nasin la, kipisi nanpa 59 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 58](58)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 60](60)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 59
+治人事天、莫若嗇。夫唯嗇、是谓早服。早服谓之重积德。重积德、则无不克。无不克、则莫知其极。莫知其极、可以有国。有国之母、可以长久。是谓深根、固柢、长生、久视之道。
 
-治人事天、莫若嗇。夫唯嗇、是謂早服。早服謂之重積德。重積德、則無不克。無不克、則莫知其極。莫知其極、可以有國。有國之母、可以長久。是謂深根、固柢、長生、久視之道。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | In governing the country and serving Heaven
 |  |  | There is nothing like frugality.
 |  |  | Only by being frugal can you recover quickly.
@@ -24,3 +29,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 59
 |  |  | The way to long life and eternal vision.
 
 {% include kipisi-nav.html num=59 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
