--- a/lipu-pi-nasin-sewi/62.md
+++ b/lipu-pi-nasin-sewi/62.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 62
+title: lipu nasin la, kipisi nanpa 62 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 61](61)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 63](63)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 62
+道者万物之奥。善人之宝、不善人之所保。美言可以市、尊行可以加人。人之不善、何弃之有。故立天子、置三公、虽有拱壁以先则駟马、不如坐进此道。古之所以 贵此道者何。不曰以求得、有罪以免邪。故为天下贵。
 
-道者萬物之奧。善人之寶、不善人之所保。美言可以市、尊行可以加人。人之不善、何棄之有。故立天子、置三公、雖有拱壁以先則駟馬、不如坐進此道。古之所以 貴此道者何。不曰以求得、有罪以免邪。故爲天下貴。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | The Way is hidden deeply in all things.
 |  |  | It is the treasure of the good
 |  |  | And the refuge of the not-so-good.
@@ -24,3 +29,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 62
 |  |  | Therefore it is the most prized in the world.
 
 {% include kipisi-nav.html num=62 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
