--- a/lipu-pi-nasin-sewi/63.md
+++ b/lipu-pi-nasin-sewi/63.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 63
+title: lipu nasin la, kipisi nanpa 63 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 62](62)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 64](64)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 63
+为无为、事无事、味无味。大小多少、报怨以德。图难於其易、为大於其细。天下难事必作於易、天下大事必作於细。是以圣人终不为大、故能成其大。夫轻诺必寡信、多易必多难。是以圣人犹难之。故终无难矣。
 
-爲無爲、事無事、味無味。大小多少、報怨以德。圖難於其易、爲大於其細。天下難事必作於易、天下大事必作於細。是以聖人終不爲大、故能成其大。夫輕諾必寡信、多易必多難。是以聖人猶難之。故終無難矣。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Do without “doing.”
 |  |  | Get involved without manipulating.
 |  |  | Taste without tasting.
@@ -28,3 +33,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 63
 |  |  | And hence, never has difficulty.
 
 {% include kipisi-nav.html num=63 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
