--- a/lipu-pi-nasin-sewi/64.md
+++ b/lipu-pi-nasin-sewi/64.md
@@ -1,13 +1,18 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 64
+title: lipu nasin la, kipisi nanpa 64 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 63](63)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 65](65)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 64
-
-其安易持、其未兆易謀、其脆易 泮 、其微易散。爲之於未有、治之於未亂。合抱之木、生於毫末。九層之臺、起於累土。千里之行、始於足下。爲者敗之、執者失之。是以聖人、無爲、故無敗。無執、故無失。民之從事、常於幾成而敗之。愼終如 始、則無敗事。是以聖人欲不欲、不貴難得之貨。學不學、復衆人之所過。以輔萬物之自然、而不敢爲。
-
-| Toki Pona | Chinese | English
+其安易持、其未兆易谋、其脆易 泮 、其微易散。为之於未有、治之於未乱。合抱之木、生於毫末。九层之臺、起於累土。千里之行、始於足下。为者败之、执者失之。是以圣人、无为、故无败。无执、故无失。民之从事、常於几成而败之。愼终如 始、则无败事。是以圣人欲不欲、不贵难得之货。学不学、復众人之所过。以辅万物之自然、而不敢为。
+{:.loseta}
+| Toki Pna | Chinese | English
 |-:|:-:|:-
 |  |  | That which is at rest is easy to grasp.
 |  |  | That which has not yet come about is easy to plan for.
@@ -35,3 +40,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 64
 |  |  | Without presuming to take the initiative.
 
 {% include kipisi-nav.html num=64 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
