--- a/lipu-pi-nasin-sewi/65.md
+++ b/lipu-pi-nasin-sewi/65.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 65
+title: lipu nasin la, kipisi nanpa 65 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 64](64)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 66](66)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 65
+古之善为道者、非以明民、將以愚之。民之难治、以其智多。故以智治国、国之贼。不以智治国、国之福。知此两者、亦稽式。常知稽式、是谓玄德。玄德深矣、远 矣、与物反矣。然后乃至大顺。
 
-古之善爲道者、非以明民、將以愚之。民之難治、以其智多。故以智治國、國之賊。不以智治國、國之福。知此兩者、亦稽式。常知稽式、是謂玄德。玄德深矣、遠 矣、與物反矣。然後乃至大順。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | The ancients who were skillful at the Way
 |  |  | Did not illuminate the people
 |  |  | But rather kept them simple.
@@ -26,3 +31,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 65
 |  |  | Until they reach the Great Norm.
 
 {% include kipisi-nav.html num=65 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
