--- a/lipu-pi-nasin-sewi/68.md
+++ b/lipu-pi-nasin-sewi/68.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 68
+title: lipu nasin la, kipisi nanpa 68 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 67](67)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 69](69)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 68
+善为士者不武。善战者不怒。善胜敌者不与。善用人者为之下。是谓不争之德、是谓用人之力、是谓配天之极。
 
-善爲士者不武。善戰者不怒。善勝敵者不與。善用人者爲之下。是謂不爭之德、是謂用人之力、是謂配天之極。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | The best warrior is never aggressive.
 |  |  | The best fighter is never angry.
 |  |  | The best tactician does not engage the enemy.
@@ -18,3 +23,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 68
 |  |  | It is called the ultimate in merging with Heaven.
 
 {% include kipisi-nav.html num=68 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
