--- a/lipu-pi-nasin-sewi/7.md
+++ b/lipu-pi-nasin-sewi/7.md
@@ -12,20 +12,36 @@ sidebar:
 
 {:.loseta}
 |:-:|-|-
-| 天长地久             |  | Heaven and Earth last forever.
-| 天地所以能长且久者   |  | The reason that Heaven and Earth are able to last forever
-| 以其不自生           |  | Is because they do not give birth to themselves.
-| 故能长生             |  | Therefore, they are always alive.
-| 是以圣人后其身而身先 |  | Hence, the sage puts herself last and is first.
-| 外其身而身           |  | She is outside herself and therefore her self lasts.
-| 非以其无私耶         |  | Is it not through her selflessness
-| 故能成其私           |  | That she is able to perfect herself?
+| 天长地久                  | sewi en ma li lon tenpo ale.                                   | Heaven and Earth last forever.
+| 天地所以<br/>能长且久者   | sewi en ma li tenpo tan ni la:                                 | The reason that Heaven and Earth are able to last forever
+| 以其不自生                | ona li mama ala e ona.                                         | Is because they do not give birth to themselves.
+| 故能长生                  | tan ni li ken lon e tenpo ale.                                 | Therefore, they are always alive.
+| 是以圣人<br/>后其身而身先 | sona ni la: jan sewi li monsi e jan sewi. taso, ona li sinpin. | Hence, the sage puts herself last and is first.
+| 外其身而身                | jan sewi li poka e jan sewi.  taso, ona li insa.               | She is outside herself and therefore her self lasts.
+| 非以其无私耶              | tan ala anu seme? pilin insa ona li len ala,                   | Is it not through her selflessness
+| 故能成其私                | la — ona li ken pona e pilin insa!                             | That she is able to perfect herself?
 
 {% include kipisi-nav.html num=7 %}
 
 -------
 {:#sitelen}
 
-{:data-sitelen="true" data-sitelen-ratio="1"}
+sewi en ma li lon tenpo ale.
+{:data-sitelen="true" data-sitelen-ratio="5"}
+
+sewi en ma li tenpo tan ni,
+ona li mama ala e ona.
+{:data-sitelen="true" data-sitelen-ratio="2"}
+
+tan ni li ken lon e tenpo ale.
+{:data-sitelen="true" data-sitelen-ratio="5"}
+
+sona ni la jan sewi li monsi e jan sewi, taso ona li sinpin.
+{:data-sitelen="true" data-sitelen-ratio="2"}
+
+jan sewi li poka e jan sewi, taso ona li insa.
+tan ala anu seme?
+pilin insa ona li len ala la ona li ken pona e pilin insa!
+{:data-sitelen="true" data-sitelen-ratio="5"}
 
 {% include sitelen-sitelen-renderer.html %}
