--- a/lipu-pi-nasin-sewi/70.md
+++ b/lipu-pi-nasin-sewi/70.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 70
+title: lipu nasin la, kipisi nanpa 70 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 69](69)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 71](71)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 70
+吾言甚易知、甚易行。天下莫能知、莫能行。言有宗、事有君。夫唯无知、是以不我知。知我者希、则我者贵。是以圣人、被褐怀玉。
 
-吾言甚易知、甚易行。天下莫能知、莫能行。言有宗、事有君。夫唯無知、是以不我知。知我者希、則我者貴。是以聖人、被褐懷玉。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | My words are easy to understand
 |  |  | And easy to practice.
 |  |  | Yet nobody understands them or practices them.
@@ -22,3 +27,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 70
 |  |  | Yet hides a jewel in his bosom.
 
 {% include kipisi-nav.html num=70 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
