--- a/lipu-pi-nasin-sewi/80.md
+++ b/lipu-pi-nasin-sewi/80.md
@@ -1,14 +1,19 @@
 ---
 layout: lipu-pi-nasin-sewi
-title: lipu pi nasin Sewi — kipisi nanpa 80
+title: lipu nasin la, kipisi nanpa 80 • lipu pi nasin sewi
+sidebar:
+  - title: "kipisi ante"
+    text: |
+      * [monsi la, <br/> kipisi nanpa 79](79)
+      * [kipisi ale](index)
+      * [sinpin la, <br/> kipisi nanpa 81](81)
+      {:.kipisi-nav-sidebar}
 ---
 
-## kipisi nanpa 80
+小国寡民、使有什伯之器而不用。使民重死而不远徒。虽有舟舆、无所乘之、虽有甲兵、无所陈之。使人復结绳而用之、甘其食、美其服、安其居、乐其俗、邻国相 望、鷄犬之声相闻、民至老死不相往来。
 
-小國寡民、使有什伯之器而不用。使民重死而不遠徒。雖有舟輿、無所乘之、雖有甲兵、無所陳之。使人復結繩而用之、甘其食、美其服、安其居、樂其俗、鄰國相 望、鷄犬之聲相聞、民至老死不相往來。
-
-| Toki Pona | Chinese | English
-|-:|:-:|:-
+{:.loseta}
+|:-:|-|-
 |  |  | Let there be a small country with few people,
 |  |  | Who, even having much machinery, don't use it.
 |  |  | Who take death seriously and don't wander far away.
@@ -20,3 +25,11 @@ title: lipu pi nasin Sewi — kipisi nanpa 80
 |  |  | The people will grow old and die without visiting each other's land.
 
 {% include kipisi-nav.html num=80 %}
+
+-------
+{:#sitelen}
+
+...
+{:data-sitelen="true" data-sitelen-ratio="0.5"}
+
+{% include sitelen-sitelen-renderer.html %}
